--- a/tswift.html
+++ b/tswift.html
@@ -12,7 +12,7 @@
         <h1 id="top">My Favorite Taylor Swift Albums</h1>
     </div>
     <nav class="common">
-        <a href="../FINALIS201/index.html">Link to Bootstrap Page</a>
+        <a href="/FINALIS201/index.html">Link to Bootstrap Page</a>
     </nav>
 
     <div class="common mainbody">
@@ -32,7 +32,7 @@
         <br>
         <br>
             <li>Speak Now
-                <img src="../FINALIS201/assets/img/SPEAKNOW.png" alt="=Speak Now">
+                <img src="../FINALIS201/assets/img/SPEAKNOW.png" alt="Speak Now">
                 <br>
                 Standout Songs:
             <ul>
